k8s/app.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employeeservice
spec:
  replicas: 3
  selector:
    matchLabels:
      app: employeeservice
  template:
    metadata:
      labels:
        app: employeeservice
    spec:
      containers:
        - name: employeeservice
          image: sneha0911/employeeservice:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8097
