k8s/db.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: employeeservice-db-h # The "h" stands for headless
spec:
  clusterIP: None        # THIS IS THE SECRET SAUCE
  selector:
    app: employeeservice-db  # Must match the DB pods
  ports:
    - port: 5432
