k8s/app.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-strip-prefix@kubernetescrd
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami-service
                port:
                  number: 80
          - path: /employeeservice
            pathType: Prefix
            backend:
              service:
                name: employeeservice
                port:
                  number: 80
          - path: /attendanceservice
            pathType: Prefix
            backend:
              service:
                name: attendanceservice
                port:
                  number: 80
